# BlazeMath

./: CMakeLists.txt  README.md  mat.cpp  vec.cpp
include/: constants.h  mat.h  vec.h
tests/: mat4_tests.cc  vec2D_tests.cc  vec3D_tests.cc  vec4D_tests.cc
